wp-content/themes/woo-base/sass/_globals.scss
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* =======================================================================
## ++ Globals
========================================================================== */
html{
  overflow-y: scroll;
}

body{
    -webkit-font-smoothing: antialiased;
}



*{
    box-sizing:border-box;
}


a {
  text-decoration: none;
}

h1 {
  font-size: 3rem;
}


/* =======================================================================
## ++ Cleafix
========================================================================== */

/* float clearing for IE6 */
* html .clearfix{
 height: 1%;
 overflow: visible;
}

/* float clearing for IE7 */
*+html .clearfix{
 min-height: 1%;
}

/* float clearing for everyone else */
.clearfix:after{
 clear: both;
 content: ".";
 display: block;
 height: 0;
 visibility: hidden;
 font-size: 0;
}

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  min-height: 100%;
  overflow: auto;
  position: relative;
}

.clr{clear:both;}

.container {
  position: relative;
  width: 100%;
  overflow: auto;
  height: 100vh;

  .woo-main-content {
    position: absolute;
    right: 0;
    padding-left: 1rem;
  }

  .sidebar-left-container {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
  }
}

.onsale {
  position: absolute;
}



.grid {
   width: 100%;

  &:after {
    content: '';
    display: block;
    clear: both;
  }
}

.gutter-sizer {
  width: 1%;
}

.grid-sizer {
  width: 19%;

  @include media($breakpoint-xlarge) {
   width: 24%;
  }

  @include media($breakpoint-large) {
   width: 24%;
  }

  @include media($breakpoint-medium) {
   width: 49%;
  }

  @include media($breakpoint-small) {
   width: 99%;
  }
}

.grid-item {

  display: block;
  float: left;
  width: 19%;
  margin-bottom: 1%;

  @include media($breakpoint-xlarge) {
   width: 24%;
  }

  @include media($breakpoint-large) {
   width: 24%;
  }

  @include media($breakpoint-medium) {
    width: 49%;
  }

  @include media($breakpoint-small) {
    width: 99%;
  }
}



.imgLiquidFill {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}


.container {

  .slick-dotted.slick-slider {
    margin-bottom:0;
  }
  .slider-wrapper {
    padding-left: 0;
    position:relative;
    z-index: 0;


    &.woo-main-content {
      vertical-align: middle;
      height: 100%;

      .slick-next, .slick-prev {
        display: none !important;
      }
      .slick-dots {
        position: absolute;
        right: 40px;
        top: 50%;
        display: block;
        width: 20px;
        padding: 0;
        margin: 0;
        list-style: none;
        text-align: right;

        transform: translateY(-25%);
        -moz-transform: translateY(-25%);
        -o-transform: translateY(-25%);
        -ms-transform: translateY(-25%);

        li {
          margin: 5px 0;
          button:before {
            font-size: 20px;
            color: #fff;
          }
        }
      }

      .slider-content {
        background-size: cover;
        background-position:center;
        background-repeat: no-repeat;
        height: 100vh;

        .overlay-filter {
          background-color: rgba(0,0,0, 0.35);
        }

        .entry-content {
          position: relative;
          font-family: arial;
          font-size: 120%;
          padding: 40px;
          width: 75%;
          color: white;
          margin: 0 auto;
          height: 100vh;
          overflow: auto;

          .overlay {
            position: absolute;

            top: 50%;

            transform: translateY(-50%);
            -moz-transform: translateY(-50%);
            -o-transform: translateY(-50%);
            -ms-transform: translateY(-50%);



            h1 {
            font-size: 60px;
            margin-bottom: 20px;


            }
            p {
              line-height: 1.2em;
            }

            a {
              text-align: center;
              margin-top: 40px;
              padding: 20px;
              width: 35%;
              background: #000;
              display: inline-block;
              float: right;
              color: white;
            }
          }
        }
      }
    }
  }
}

  .imgLiquidFill {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
  }

// Front Widgets

.front-widget {

  .slick-prev, .slick-next {
    z-index:1;
    height: 100%;
    width: 60px;
    background-color: rgba(0,0,0,0.65);

    &:hover, &:focus, &:visited, &:active {
      background-color: rgba(0,0,0,0.65);
    }
  }
  .slick-prev:before, .slick-next:before {
    font-size:60px;
    padding: 0 60px;
    height: 100%;
    opacity:1;
  }
  .slick-prev {
    left:-60px;
    transition: all 0.35s;

    &:before {
      content:"";
      background-image: url('../graphics/icons/back.svg');
      background-size: cover;
      background-position:0 0;
    }
  }
  .slick-next {
    right:-60px;
    transition: all 0.35s;


    &:before {
      content:"";
      background-image: url('../graphics/icons/next.svg');
      background-size: cover;
      background-position:0 0;
    }
  }
  ul {
    li {
      &:focus {
        outline: none;
      }
      float: left;
      a:focus {
        outline: none;
      }
    }
  }
}

// Top rated widget
.front-widget {
  h4.widgettitle {
    background-color: #000;
    padding: 20px;
    color: #fff;
    font-size: 20px;
    text-transform: uppercase;
    font-family: Arial;

  }
}

// Brand Widget
.brand-widget {
  div.yith-wcbr-thumbnail-list {
    ul {
      margin:0;
      li {
        padding: 0;
        a {
          border:none !important;
          height: 140px;
          img {
            position: absolute;
            top: 50%;
            transform: translate(-50%, -50%);
          }
        }
      }
    }
  }
}

// Align fix
.woof_sid_auto_shortcode {
  @include media($breakpoint-medium) {
    display: none;
  }
}


.primary-wrapper{
  padding-left: 72px !important;
  transition: all 0.3s ease-in-out;
  overflow:hidden;
}

.nav-open{
  // left: 280px !important;
  transition: all 0.3s ease-in-out;
}


.product_list_widget {
  &:hover .slick-next {
    right: 0;
  }
  &:hover .slick-prev {
    left: 0;
  }
}

/////////////////////////

.woocommerce-breadcrumb {
  display: none;
}

.related h2 {
  margin: 0px 0px 0px 0px;
  padding: 35px 0px 5px 0px;
  color: #FFF;
  background-color: black;
}

html, body {
  height: auto;
  position: relative;
}

.page-title {
  display: none;
}

.woof_sid_auto_shortcode.woof {
    background-color: #dedede;
}

.woo-content {
  width: auto;
  height: auto;
  overflow: hidden;
  position: relative;
  z-index: 1;
}

ul .page-numbers {
  border: 1px solid;
  border-radius: 4px;
}

